--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -36,10 +36,11 @@
     color: $color-inverse;
     padding: 1.5rem 2rem !important;
     border: 1px solid $color-primary;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.18); // sombra sutil para contraste
 
     &:hover {
-        background-color: $color-inverse;
-        color: $color-primary;
+        background-color: color.adjust($color-primary, $lightness: -7%);
+        color: $color-inverse;
         border: 1px solid $color-primary;
     }
 }
