--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,6 +1,7 @@
 @use '@/styles/variables' as *;
 
 .container {
+    padding-top: 80px;
     margin: 0 auto;
     overflow: hidden;
     display: flex;
